--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@headlessui/react": "^2.1.6",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/material": "^6.1.0",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -19,6 +22,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.438.0",
     "next": "14.2.7",
+    "payhere-embed-sdk": "^0.7.7",
     "react": "^18",
     "react-dom": "^18",
     "react-toastify": "^10.0.5",
